[project]
name = "gtp-back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "groq>=0.22.0",
    "openai>=1.69.0",
    "ruff>=0.11.2",
    "uvicorn>=0.34.0",
]
